--- a/package.json
+++ b/package.json
@@ -11,18 +11,26 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.3.0",
+    "@angular/cdk": "^14.0.4",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
     "@angular/forms": "~13.3.0",
     "@angular/localize": "~13.3.0",
+    "@angular/material": "^14.0.4",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@fortawesome/fontawesome-free": "^6.1.1",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.10.2",
+    "@types/chart.js": "^2.9.37",
+    "angular-bootstrap-md": "^13.0.0",
+    "animate.css": "^4.1.1",
     "autoprefixer": "10.4.5",
     "bootstrap": "^5.1.3",
+    "chart.js": "^2.9.4",
+    "hammerjs": "^2.0.8",
     "ng-bootstrap-form-validation": "^9.0.1",
     "ngx-bootstrap": "^8.0.0",
     "rxjs": "~7.5.0",
