--- a/package.json
+++ b/package.json
@@ -23,17 +23,21 @@
     "@angular/router": "~14.0.4",
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
+    "@ng-select/ng-select": "^9.0.2",
     "@popperjs/core": "^2.10.2",
+    "@swimlane/ngx-datatable": "^20.0.0",
     "@types/chart.js": "^2.9.37",
     "angular-bootstrap-md": "^13.0.0",
     "animate.css": "^4.1.1",
     "autoprefixer": "10.4.5",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.2.0-beta1",
     "chart.js": "^2.9.4",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.6.0",
     "ng-bootstrap-form-validation": "^9.0.1",
     "ngx-bootstrap": "^8.0.0",
     "rxjs": "~7.5.0",
+    "select2": "^4.1.0-rc.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -43,6 +47,7 @@
     "@angular/compiler-cli": "~14.0.4",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@types/select2": "^4.0.55",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
