--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rdma-intern",
   "version": "0.0.0",
   "scripts": {
+    "dev": "npm run development",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -42,6 +43,9 @@
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
+  "overrides": {
+    "autoprefixer": "10.4.5"
+ },
   "devDependencies": {
     "@angular-devkit/build-angular": "~14.0.4",
     "@angular/cli": "~14.0.4",
