--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "chart.js": "^2.9.4",
     "hammerjs": "^2.0.8",
     "jquery": "^3.6.0",
+    "moment": "^2.29.4",
     "ng-bootstrap-form-validation": "^9.0.1",
     "ngx-bootstrap": "^8.0.0",
     "rxjs": "~7.5.0",
@@ -45,7 +46,7 @@
   },
   "overrides": {
     "autoprefixer": "10.4.5"
- },
+  },
   "devDependencies": {
     "@angular-devkit/build-angular": "~14.0.4",
     "@angular/cli": "~14.0.4",
